# py0XX

py00/ex0/: ft_hello_garden.py
py00/ex1/: ft_garden_name.py
py00/ex2/: ft_plot_area.py
py00/ex3/: ft_harvest_total.py
py00/ex4/: ft_plant_age.py
py00/ex5/: ft_water_reminder.py
py00/ex6/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
py00/ex7/: ft_seed_inventory.py
py01/ex0/: ft_garden_intro.py
py01/ex1/: ft_garden_data.py
py01/ex2/: ft_plant_growth.py
py01/ex3/: ft_plant_factory.py
py01/ex4/: ft_garden_security.py
py01/ex5/: ft_plant_types.py
py01/ex6/: ft_garden_analytics.py
py02/ex0/: ft_first_exception.py
py02/ex1/: ft_raise_exception.py
py02/ex2/: ft_different_errors.py
py02/ex3/: ft_custom_errors.py
py02/ex4/: ft_finally_block.py
py03/ex0/: ft_command_quest.py
py03/ex1/: ft_score_analytics.py
py03/ex2/: ft_coordinate_system.py
py03/ex3/: ft_achievement_tracker.py
py03/ex4/: ft_inventory_system.py
py03/ex5/: ft_data_stream.py
py03/ex6/: ft_data_alchemist.py
py04/ex0/: ft_ancient_text.py
py04/ex1/: ft_archive_creation.py
py04/ex2/: ft_stream_management.py
py04/ex3/: ft_vault_security.py
py05/ex0/: data_processor.py
py06/: elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
py07/: battle.py  capacitor.py  tournament.py
py08/ex1/: loading.py  pyproject.toml  requirements.txt
(+30 files in other folders)
